<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nocompany.calcollector.PrimaryAccountActivity">

    <item
        android:id="@+id/action_add_deposit"
        android:title="@string/action_add_deposit"
        android:orderInCategory="1"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_take_deposit"
        android:title="@string/action_take_deposit"
        android:orderInCategory="2"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_spend"
        android:title="@string/action_add_spending"
        android:orderInCategory="1"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add_stand"
        android:title="@string/action_add_stand"
        android:orderInCategory="1"
        android:visible="false"
        app:showAsAction="always" />
</menu>
