<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/list_background"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/dialog_on_credit"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="22sp"
            android:text="@string/dialog_on_credit_title"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:gravity="center_vertical|right"
            android:paddingLeft="5dp"
            android:text="@string/textview_account_amount"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/edittext_account_amount"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:background="@null"
            android:textSize="18sp"
            android:textColor="@color/edittext_font_color"
            android:textCursorDrawable="@null"
            android:singleLine="true"
            android:inputType="number"
            android:hint="0" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"/>
        <TextView
            android:id="@+id/textview_account_amount_validator"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.2"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:gravity="center_vertical|right"
            android:paddingLeft="5dp"
            android:text="@string/textview_account_disbursement"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/edittext_account_disbursement"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:background="@null"
            android:textSize="18sp"
            android:textColor="@color/edittext_font_color"
            android:textCursorDrawable="@null"
            android:singleLine="true"
            android:inputType="number"
            android:hint="0" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"/>
        <TextView
            android:id="@+id/textview_account_disbursement_validator"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.2"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:gravity="center_vertical|right"
            android:paddingLeft="5dp"
            android:text="@string/textview_account_installment"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/edittext_account_installment"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:background="@null"
            android:textSize="18sp"
            android:textColor="@color/edittext_font_color"
            android:textCursorDrawable="@null"
            android:singleLine="true"
            android:inputType="number"
            android:hint="0" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"/>
        <TextView
            android:id="@+id/textview_account_installment_validator"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.2"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:gravity="center_vertical|right"
            android:paddingLeft="5dp"
            android:text="@string/textview_account_length"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/edittext_account_length"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:background="@null"
            android:textSize="18sp"
            android:textColor="@color/edittext_font_color"
            android:textCursorDrawable="@null"
            android:singleLine="true"
            android:inputType="number"
            android:hint="0" />
        <TextView
            android:id="@+id/textview_account_length_unit"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="Day(s)"/>
        <TextView
            android:id="@+id/textview_account_length_validator"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.2"/>
    </LinearLayout>
</LinearLayout>