<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linearlayout_add_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/list_background"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
        <ImageView
            android:id="@+id/imageview_add_spend_stand"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/dialog_spend"/>
        <TextView
            android:id="@+id/textview_add_spend_stand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="22sp"
            android:text="@string/dialog_add_spend_title"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayout_item_remark"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:id="@+id/textview_item_remark"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:gravity="center_vertical|right"
            android:paddingLeft="5dp"
            android:text="@string/textview_item_remark"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/edittext_item_remark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:inputType="textMultiLine"
            android:lines="3"
            android:scrollbars="vertical"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:background="@null"
            android:textSize="18sp"
            android:textColor="@color/edittext_font_color"
            android:textCursorDrawable="@null"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 "
            android:hint="Item Details"/>
        <TextView
            android:id="@+id/textview_item_remark_validator"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.2"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayout_item_price"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center">
        <TextView
            android:id="@+id/textview_item_price"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:gravity="center_vertical|right"
            android:paddingLeft="5dp"
            android:text="@string/textview_item_price"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/edittext_item_price"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:background="@null"
            android:textSize="18sp"
            android:textColor="@color/edittext_font_color"
            android:textCursorDrawable="@null"
            android:singleLine="true"
            android:inputType="number"
            android:hint="0" />
        <TextView
            android:id="@+id/textview_item_price_validator"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.2"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayout_item_receiver"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center">
        <TextView
            android:id="@+id/textview_item_receiver"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:gravity="center_vertical|right"
            android:paddingLeft="5dp"
            android:text="@string/textview_item_receiver"
            android:textSize="18sp"/>
        <Spinner
            android:id="@+id/spinner_item_receiver"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@color/edittext_font_color"
            android:spinnerMode="dropdown">
        </Spinner>
        <TextView
            android:id="@+id/textview_item_receiver_validator"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.2"/>
    </LinearLayout>
</LinearLayout>